# ASPZ_PR1

./: CMakeLists.txt  Makefile  README.md  input.c  input.h  main  main.c  output.c  output.h
mylibs/: process.c  process.h
usr/lib/: process1.c  process1.h
